--- a/styling/style3.css
+++ b/styling/style3.css
@@ -277,6 +277,9 @@ main {
 .payment-input {
     width: 100%; 
     text-align: center; 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .payment-input label {
